[package]
name = "redpanda-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.34.0", features = [
    "zstd",
    "cmake-build",
    "ssl-vendored",
    "gssapi-vendored",
    "external-lz4",
] }
tokio = { version = "1.33.0", features = ["full", "fs", "io-util"] }
rand = "0.8.5"
bytes = { version = "1.3.0", features = ["serde"] }
fern = "0.6"
anyhow = "1.0.66"
log = "0.4"
chrono = { version = "0.4.31", features = ["serde"] }
